--- a/.github/workflows/Build and Push Docker Image.yml
+++ b/.github/workflows/Build and Push Docker Image.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build and push Docker image for kargo-demo-app
       uses: docker/build-push-action@v2
       with:
-        context: api
+        context: .
         push: true
         tags: |
           ghcr.io/tautcius/kargo-demo-app:${{ steps.bump_version.outputs.version }}
